@@ -61,6 +61,19 @@
           <version>2.0.0</version>
           <scope>provided</scope>
         </dependency>
+
+        <dependency>
+          <groupId>org.apache.avro</groupId>
+          <artifactId>avro</artifactId>
+          <version>1.7.5</version>
+        </dependency>
+
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.8.1</version>
+          <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -98,6 +111,74 @@
           </plugin>
 
           <plugin>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-maven-plugin</artifactId>
+            <version>1.7.5</version>
+            <configuration>
+              <!-- Avro string compiled to java.lang.String instead of CharSequence -->
+              <stringType>String</stringType>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>schema</goal>
+                  <goal>idl-protocol</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3.2</version>
+            <configuration>
+              <source>1.6</source>
+              <target>1.6</target>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>com.google.code.maven-replacer-plugin</groupId>
+            <artifactId>maven-replacer-plugin</artifactId>
+            <version>1.3.8</version>
+            <configuration>
+              <!-- Use a regex replace to suppress java compiler warnings
+                   in the generated code.  What a hack, eh? -->
+              <basedir>${basedir}</basedir>
+            </configuration>
+            <executions>
+              <execution>
+                <!--
+                    In all projects, if you generate avro code, then it should have the following
+                    replacement regex run on it.
+                -->
+                <id>suppress-avro-warnings</id>
+                <phase>process-sources</phase>
+                <goals>
+                  <goal>replace</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <!-- This is a relative path because the plugin prefixes ${basedir} for us. -->
+                    <include>target/generated-sources/avro/**/*.java</include>
+                    <include>target/generated-test-sources/avro/**/*.java</include>
+                  </includes>
+                  <regex>false</regex>
+                  <replacements>
+                    <!-- This is a temporary fix until AVRO-1047 is resolved. -->
+                    <replacement>
+                      <token>@SuppressWarnings("all")</token>
+                      <value>@SuppressWarnings("unchecked")</value>
+                    </replacement>
+                  </replacements>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
             <groupId>net.alchim31.maven</groupId>
             <artifactId>scala-maven-plugin</artifactId>
             <version>3.1.6</version>
@@ -123,6 +204,20 @@
                 </configuration>
             </execution>
             </executions>
+          </plugin>
+
+          <!-- ScalaTest -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-Xmx2G -XX:MaxPermSize=512m</argLine>
+              <includes>
+                <include>**/*Suite.scala</include>
+                <include>%regex[.*/.*Suite.class]</include>
+              </includes>
+              <forkMode>once</forkMode>
+            </configuration>
           </plugin>
         </plugins>
     </build>
